<resources>
    <string name="app_name">MediHome for Clinic</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="title_dashboard">Reservasi</string>
    <string name="title_home">Home</string>
    <string name="title_antrian">Antrian</string>
    <string name="title_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="data_pasien">Data Pasien</string>
    <string name="data_pemesanan">Data Pemesan</string>
    <string name="pilih_alasan_menolak">Pilih alasan Anda menolak</string>
    <string name="alasan1">Sedang tidak praktik pada hari tersebut</string>
    <string name="alasan2">Reservasi di jam tersebut sudah penuh</string>
    <string name="alasan3">Reservasi di hari tersebut sudah penuh</string>
    <string name="alasan4">Layanan sedang tidak tersedia</string>
</resources>
